--- a/style.css
+++ b/style.css
@@ -33,7 +33,9 @@ body {
       11px 11px 6px rgba(0, 0, 0, 0.05);
 }
 
-
+.container {
+  max-width: 1100px;
+}
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
 TOP
 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
@@ -107,7 +109,6 @@ SEARCH
   font-size: 1em;
 }
 
-/*Resize the wrap to see the search bar change!*/
 .search-form{
   position: absolute;
   top: 50%;
@@ -127,16 +128,43 @@ SEARCH
 }
 
 #searchResult {
-  background-color: black; /*rgba(98,189, 254, 1);*/
+  position: absolute;
+  width : 90%;
+  height: 700px;
+  max-width: 1050px;
+  top: 75%;
+  left: 50%;
+  transition: transform 0.28s ease-in-out; 
+  transform: translate(-50%, -50%);
+  border-radius: 10px;
+  box-shadow: 2px 8px 9px 0px rgba(0, 0, 0, 0.14),
+      11px 11px 6px rgba(0, 0, 0, 0.05);
+
+  background-color: black; 
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  /* transition: width 2s, height 2s, transform 2s; */
-  /* transition: transform 0.28s ease-in-out; */
+  
   overflow:hidden;
-  transition:max-height 0.3s ease-out; 
-  height:auto;
+  z-index: 1;
 }
+/* #piechart {
+  width: 300px; 
+  height: 300px; 
+}*/
+
+/* background-color: black; 
+border-radius: 10px;
+box-shadow: 2px 8px 9px 0px rgba(0, 0, 0, 0.14),
+    11px 11px 6px rgba(0, 0, 0, 0.05); */
+
+
+
+/* #map {
+  height: 400px;  
+  max-width: 300px; 
+  height: auto; 
+ } */
 
 .resultBox {
   background-color : black;
@@ -146,8 +174,20 @@ SEARCH
 }
 
 .searchList1,.searchList2 { 
+  padding-top: 50px;
   font-weight: 700;
   font-family: 'Oxygen', sans-serif; 
+}
+
+#layer-close {
+  display: block;
+  position:absolute;
+  top : 10px;
+  right : 10px;
+}
+
+.layer-close {
+  transform: translateX(0px);
 }
 
 
@@ -230,11 +270,11 @@ li{
   list-style-type: none;
 }
 
-#searchresult{
+/* #searchresult{
   background-color: lightblue;
   width :500px;
   height : 200px;
-}
+} */
 
 .title {
 padding: 10px;
