--- a/style.css
+++ b/style.css
@@ -294,3 +294,11 @@ footer {
   color: white;
   text-align: center;
 }
+
+
+@media (max-width: 850px) {
+
+  #searchResult {
+    height: 1000px;
+  }
+}
